--- a/style.css
+++ b/style.css
@@ -1,53 +1,57 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
+  margin-bottom: 44px;
 }
-.aaa img {
+.header__img {
+  display: block;
   width: 100%;
 }
-.aaa .more_inf {
+.header .header__info-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa { 
+  .header { 
     text-align: center;
   }
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.todo-list__input,
+.todo-list__label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.add-todo-wrapper {
   display: flex;
+  padding-top: 18px;
+  padding-bottom: 46px;
 }
-ul {
+.todo-list {
   margin: 0;
-  padding: 0px;
+  padding: 0 0 32px 0;
 }
-li,
-h2 {
+li {
   list-style: none;
 }
 input,
-button{
+button {
   outline: none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -56,21 +60,21 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h2,
-label[for="new-task"] {
+.section__title {
+  display: block;
   color: #333;
   font-weight: 700;
   font-size: 15px;
   border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
+  padding-bottom: 10px;
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.todo-list__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,71 +86,58 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.todo-list__input:focus {
   color: #333;
 }
 
-/* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
-}
-input#new-task {
-  width: 318px;
-}
-
 /* Task list */
-li {
+.todo-list__item {
   overflow: hidden;
-  padding: 20px 0;
+  padding: 18px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.todo-list__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.todo-list__checkbox {
   margin: 0 10px;
 }
-li > label {
+.todo-list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
-  width: 226px;
-}
-button.delete img {
+.btn__icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn__icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.todo-list__label_completed {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-  display:none;
+.todo-list .todo-list__input {
+  display: none;
 }
 
-ul li.editMode input[type=text] {
+.todo-list__item_edit .todo-list__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.todo-list__item_edit .todo-list__label {
   display: none;
 }
 
