--- a/style.css
+++ b/style.css
@@ -1,9 +1,41 @@
+/* Reset */
+li {
+  list-style: none;
+}
+
+input,
+button {
+  outline: none;
+}
+
+/* Vendors */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* Basic Style */
 .page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
+
+.main {
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
+}
+
+/* Header */
 .header {
   width: 500px;
   margin: 0 auto;
@@ -11,11 +43,13 @@
   text-align: right;
   margin-bottom: 44px;
 }
+
 .header__img {
   display: block;
   width: 100%;
 }
-.header .header__info-link {
+
+.header__info-link {
   font-family: fantasy, cursive;
 }
 
@@ -24,45 +58,7 @@
     text-align: center;
   }
 }
-.main {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-.todo-list__input,
-.todo-list__label {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-.add-todo-wrapper {
-  display: flex;
-  padding-top: 18px;
-  padding-bottom: 46px;
-}
-.todo-list {
-  margin: 0;
-  padding: 0 0 32px 0;
-}
-li {
-  list-style: none;
-}
-input,
-button {
-  outline: none;
-}
-.btn {
-  background: none;
-  border: 0px;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-}
-.btn:hover {
-  color: #3a3a3a;
-}
+
 /* Heading */
 .section__title {
   display: block;
@@ -74,6 +70,14 @@ button {
   margin: 0;
   text-transform: uppercase;
 }
+
+/* Add todo */
+.add-todo-wrapper {
+  display: flex;
+  padding-top: 18px;
+  padding-bottom: 46px;
+}
+
 .todo-list__input {
   margin: 0;
   font-size: 18px;
@@ -86,11 +90,49 @@ button {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .todo-list__input:focus {
   color: #333;
 }
 
+.todo-list__input,
+.todo-list__label {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+}
+
+/* Btn */
+.btn {
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: #3a3a3a;
+}
+
+.btn__icon {
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
+}
+
+.btn__icon:hover {
+  transform: rotateZ(0);
+}
+
 /* Task list */
+.todo-list {
+  margin: 0;
+  padding: 0 0 32px 0;
+}
+
 .todo-list__item {
   overflow: hidden;
   padding: 18px 0;
@@ -99,6 +141,7 @@ button {
   justify-content: space-between;
   align-items: center;
 }
+
 .todo-list__item > * {
   vertical-align: middle;
 }
@@ -106,25 +149,12 @@ button {
 .todo-list__checkbox {
   margin: 0 10px;
 }
+
 .todo-list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
-}
-.btn__icon {
-  height: 2em;
-  transform: rotateZ(45deg);
-  transition: transform 200ms ease-in;
-}
-.btn__icon:hover {
-  transform: rotateZ(0);
-}
-
-/* Completed */
-.todo-list__label_completed {
-  text-decoration: line-through;
-  color: #888;
 }
 
 /* Edit Task */
@@ -141,15 +171,8 @@ button {
   display: none;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+/* Completed */
+.todo-list__label_completed {
+  text-decoration: line-through;
+  color: #888;
 }
